examples/errors/json_missing_key.raq
[request]
POST https://jsonplaceholder.typicode.com/posts

[headers]
Content-Type: application/json

[body type="json"]
{
  "title": "foo"
}

[assertions]
json_field: title ^foo$
json_field: other ^bar$
